<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Min" />

        <EditText
            android:id="@+id/etMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Max" />

        <Button
            android:id="@+id/btnFind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etkeyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/keyword" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>